[Bugfix] tooltip text overflow (#370)

--- a/src/constants/styles.scss
+++ b/src/constants/styles.scss
@@ -121,3 +121,15 @@ $mobile-width: 640px;
     margin: 0 1.2px;
   }
 }
+// https://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/
+%word-wrap {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
